# cognitao_ros

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  command.sh  package.xml  script1.sh
action/: ActionMsg.action  Runner.action
action_manager/: CMakeLists.txt  package.xml
cognitao_ros/: CMakeLists.txt  package.xml  ros_config_debug.json
cognitao_ros/include/: BehaviourRosProxy.h  BehaviourThreadRosProxy.h  MinimalActionServerExample.h  Ros1Runner.h  Ros1RunnerFactoryMethod.h  RosDataSource.h  StateRosProxy.h  StateThreadRosProxy.h
cognitao_ros/include/cognitao_ros/client/: Ros1Runner.h
cognitao_ros/include/cognitao_ros/server/: MinimalActionServer.h
cognitao_ros/include/cognitao_ros/server_example/: MinimalActionServerExample.h
cognitao_ros/machines/: ros_bt_debug _rosrunner.xml  ros_bt_debug.xml
cognitao_ros/src/: action_server_main.cpp  main.cpp
cognitao_ros/src/client/: Ros1Runner.cpp  Ros1RunnerPlugin.cpp
cognitao_ros/src/server/: MinimalActionServer.cpp  action_server_main.cpp
cognitao_ros/src/server_example/: MinimalActionServerExample.cpp
cognitao_ros_action_server/: CMakeLists.txt  package.xml
cognitao_ros_action_server/include/: MinimalActionServer.h  MultiGoalActionServer.h
cognitao_ros_action_server/src/: main.cpp
cognitao_ros_action_server_example/: CMakeLists.txt  package.xml
cognitao_ros_action_server_example/include/: MinimalActionServerExample.h
dm_ros/: CMakeLists.txt  install.sh  package.xml
dm_ros/include/: BehaviourRosProxy.h  BehaviourThreadRosProxy.h  RosDataSource.h  StateRosProxy.h  StateThreadRosProxy.h
dm_ros/src/: main.cpp
dm_ros/src/cognitao_ros/: README.md  cogniTao_Install.sh
dm_ros/src/cognitao_ros/cognitao_ros/include/: BehaviourRosProxy.h  StateRosProxy.h  StateThreadRosProxy.h
dm_ros/src/cognitao_ros/cognitao_ros/src/: main.cpp
dm_ros/src/cognitao_ros/cognitao_ros_action_server/: package.xml
dm_ros/src/cognitao_ros/cognitao_ros_action_server/src/: main.cpp
dm_ros/src/cognitao_ros/cognitao_ros_action_server_example/: package.xml
dm_ros/src/cognitao_ros/cognitao_ros_action_server_example/src/: main.cpp
include/: RosDataSource.h
include/cognitao_ros/client/: Ros1Runner.h
include/cognitao_ros/data_source/: RosDataSource.h
include/cognitao_ros/ros_dataSource/: RosDataSource.h
include/cognitao_ros/runner/: RosRunner.h
include/cognitao_ros/server/: MinimalActionServer.h  MultiGoalActionServer.h  RosActionContext.h  RosActionServer.h
include/cognitao_ros/server_example/: MinimalActionServerExample.h  RosActionServerExample.h  RosActionWaitServer.h
machines/: check.xml  ros.xml  ros_bt_debug _rosrunner.xml
msg/: Action.msg
src/: main.cpp
src/client/: Ros1Runner.cpp  Ros1RunnerPlugin.cpp
src/data_source/: RosDataSource.cpp  RosDataSourcePlugin.cpp
src/executables/: topics.cpp
src/ros_dataSource/: RosDataSource.cpp  RosDataSourcePlugin.cpp  src_executables_cognitao_wmm.cpp
src/runner/: RosRunner.cpp  RosRunnerPlugin.cpp
src/server/: MinimalActionServer.cpp  RosActionServer.cpp  action_server_main.cpp
src/server_example/: MinimalActionServerExample.cpp  RosActionServerExample.cpp  RosActionWaitServer.cpp  Ros_Server_Example_Main.cpp  main.cpp  minimal_server_example_main.cpp
srv/: getvar.srv
